X11: Add TestDesktopScreenX11 to simulate mouse movement in ui tests

BUG=640741

Review-Url: https://codereview.chromium.org/2327623002
Cr-Commit-Position: refs/heads/master@{#417978}

Former-commit-id: 4dcd8ad19534e6084fff6bc2229acd90ecf4c316